Fixed missing background image

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 30% 5% 50% 15%;
     justify-content: center;
-    background: url("/images/brick.jpg") repeat;
+    background: url("../images/brick.jpg") repeat;
     background-size: 70%;
     background-clip: content-box;
 }
